# github-graphql

./: CHANGELOG.md  README.md  github-graphql.cabal
.github/workflows/: ci.yml
src/: GitHub.hs  GithubGraphql.hs
src/GitHub/: Author.hs  Author.hs-boot  Common.hs  Connection.hs  GraphQL.hs  Id.hs  Issue.hs  Issues.hs  Json.hs  Label.hs  Lens.hs  Milestone.hs  Milestone.hs-boot  Order.hs  Order.hs-boot  PullRequests.hs  Query.hs  Render.hs  Repository.hs  RequiredField.hs  Title.hs  User.hs
test/: Spec.hs
test/Test/: Data.hs  Query.hs  Render.hs
