cabal-version:       2.4
name:                github-graphql
version:             0.0.0.0
synopsis:            GraphQL bindings to GitHub API
description:
    GraphQL bindings to GitHub API.
    See [README.md](https://github.com/kowainik/github-graphql#github-graphql) for more details.
homepage:            https://github.com/kowainik/github-graphql
bug-reports:         https://github.com/kowainik/github-graphql/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2021 Kowainik
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/github-graphql.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 4.15

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       StrictData
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     GitHub
                         GitHub.Author
                         GitHub.Connection
                         GitHub.GraphQL
                         GitHub.Id
                         GitHub.Issues
                         GitHub.Label
                         GitHub.Lens
                         GitHub.PullRequests
                         GitHub.Render
                         GitHub.Query
                         GitHub.Repository
                         GitHub.RequiredField
                         GitHub.Title
                         GitHub.User

  build-depends:       aeson ^>= 1.5
                     , bytestring ^>= 0.10
                     , http-client ^>= 0.7
                     , http-client-tls ^>= 0.3
                     , http-types ^>= 0.12
                     , prolens ^>= 0.0
                     , text ^>= 1.2.3
                     , type-errors-pretty ^>= 0.0.1.1

test-suite github-graphql-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Data
                       Test.Query
                       Test.Render
  build-depends:       aeson
                     , github-graphql
                     , hspec
                     , prolens
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
